sumo/tests/sumo/errors/network/edge/testsuite.sumo
root__edge#id__empty1

root__edge#id__empty2

root__edge#id__ungiven1

root__edge#id__ungiven2

root__edge#id__false1

root__edge#id__false2


root__edge#function__empty1

root__edge#function__empty2

root__edge#function__ungiven1

root__edge#function__ungiven2

root__edge#function__invalid1

root__edge#function__invalid2





lane

